Implement P4 lifecycle API (#10)
